--- a/common/common.css
+++ b/common/common.css
@@ -13,6 +13,10 @@ page {
 	background-color: rgba(0, 0, 0, .3);
 }
 
+.color-FFA904 {
+	color: #FFA904;
+}
+
 .article-font {
 	font-size: 30upx;
 }
@@ -187,9 +191,9 @@ page {
 .sigle-line-text-2 {
 	width: 100%;
 	display: -webkit-box;
--webkit-box-orient: vertical;
--webkit-line-clamp: 2;
-overflow: hidden;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
+	overflow: hidden;
 }
 
 .pd-box {
@@ -227,5 +231,3 @@ overflow: hidden;
 .mgr-60 {
 	margin-right: 60upx;
 }
-
-
